--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* 1. <header> - container - Marcin
+/* 
+   1. <header> - container - Marcin
    2. <nav> - contanier - Karolina
    3. slider - container-fluid - Piotr
    4. polecane - container - Adrian
@@ -55,7 +56,6 @@ body{
     padding-left: 17px;
 }
 
-
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -69,20 +69,624 @@ body{
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
+/* linia pozioma */
+.line {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #cacaca;
+    position: relative;
+  }
+ 
+  .line:after {
+    content: '';
+    width: 21px;
+    height: 14px;
+    background: url('../img/border-deco.png') no-repeat;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -10px;
+  }
+
 /* ----- */
 /* style Nasze */
 /* ----- */
 
 /* ----- */
 /* Marcin  */
+#header .header-top > div {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 12px;
+}
+#header .header-top a{
+    color: #ea7d3c;
+    text-decoration: none;
+    padding-left: 6px;
+}
+#header .header-top a:hover{
+    text-decoration: underline;
+}
+#header .header-top img{
+    height: 16px;
+}
+#header .header-top .fa-envelope{
+    padding-right: 12px;
+}
+#header .header-top .lang{
+    padding-left: 12px;
+    vertical-align: middle;
+}
+
+#header .header-top .right {
+    text-align: right;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+#header .fa-phone {
+    transform: rotateY(180deg);
+    padding-left: 8px;
+    margin-left: 45px;
+}
+
+#header-logo {
+    background: #fdfdfd;
+    /* padding-top: 30px; */
+    /* padding-bottom: 30px; */
+    border-top: 1px solid #dde6eb;
+    border-bottom: 1px solid #dde6eb;
+}
+#header-logo .padding {
+    padding-top:30px;
+    padding-bottom: 30px;
+}
+#header-logo form{
+    position: relative;
+    margin-left: 75px;
+}
+
+#header-logo .input-1 {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #dde6eb;
+    padding-left: 15px;
+}
+#header-logo .button-submit {
+    position: absolute;
+    top: 15px;
+    right: 24px;
+    border: 0;
+    font-size: 18px;
+    color: #ea7d3c;
+    background: #fff;
+}
+
+#header-logo .button-submit fas {
+    background: #fff;
+}
+
+#header-logo .icons {
+    text-align: right;
+}
+#header-logo .icons > div {
+    
+    display: inline-block;
+}
+#header-logo .icons .float-left {
+    border-left: 1px solid #dde6eb;
+    width: 80px;    
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+#header-logo .icons .float-left:last-child {
+    border-right: 1px solid #dde6eb;
+    width: 120px;
+    position: relative;
+}
+
+#header-logo .icons .float-left:last-child p {
+    font-size: 18px;
+    color: #ea7d3c;
+}
+
+#header-logo .icons .float-left:last-child p:hover {
+    font-size: 18px;
+    background: #ea7d3c;
+    color: #fff;
+    width: 120px;
+}
+
+#header-logo .icons .float-left:last-child span {
+    position: absolute;
+    top: 25px;
+    right: 38px;
+    background: #ea7d3c;
+    border-radius: 109px;
+    height: 16px;
+    padding: 2px;
+    width: 16px;
+    color: #fff;
+    font-size: 12px;
+}
+
+#header-logo .icons a {
+    color: #202020;
+    text-decoration: none;
+}
+
+#header-logo .icons a:hover {
+    color: #ea7d3c;
+}
+
+#header-logo .icons a .fas {
+    color: #010101;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    padding-top: 15px;
+    font-size: 18px;
+}
+#footer {
+    margin-top: 30px;
+}
+
+#footer .row-no-gutters .container h3 {
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+#footer .row-no-gutters .container ul {
+    list-style-type: none;
+    padding-left: 0;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+#footer .row-no-gutters .container div {   
+    margin-bottom: 20px;    
+}
+
+
 
 /* Karolina */
+  /* #nav */
+  #nav {
+    position: relative;
+    z-index: 100000;
+    transition: 0.3s;
+    padding-left: 0;
+    padding-right: 0;
+  }
+ 
+  #nav-toggle {
+    display: none;
+  }
+ 
+    /* I poziom */
+    #nav ul {
+      font-weight: bold;
+      background: #fff;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul {
+      text-align: center;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul a {
+      color: #222;
+      text-decoration: none;
+      display: block;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li {
+      font-size: 14px;
+      text-transform: uppercase;
+      float: left;
+      /*margin-right: 54px;*/
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:last-child {
+      margin-right: 0;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:hover ul,
+    #nav > .row > [class*="col-"] > ul > li:hover ul ul {
+      display: block;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:hover ul ul ul {
+      display: none;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:last-child {
+      margin-right: 0;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li > a {
+      /* display: block; */
+      /*padding: 0 14px;*/
+      /*padding: 0 68px 0 14px;*/
+      padding: 0 34px 0 41px;
+      height: 68px;
+      display: table-cell;
+      vertical-align: middle;
+      position: relative;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li span.menu-border {
+      height: 2px;
+      display: block;
+      width: 100%;
+      background: #ea7d3c;
+      position: absolute;
+      bottom: 16px;
+      opacity: 0;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:hover span.menu-border {
+      opacity: 1;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li:first-child > a {
+      padding-left: 16px;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul > li > a i.fas {
+      padding-left: 8px;
+    }
+ 
+    /* II poziom */
+    #nav > .row > [class*="col-"] > ul ul {
+      display: none;
+      position: absolute;
+      top: 68px;
+      left: 0;
+      right: 0;
+      box-shadow: 0px 2px 10px #eee;
+      padding: 20px 0 30px 0;
+      text-align: left;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul > li {
+      float: left;
+      width: 25%;
+    }
+ 
+    /* III poziom */
+ 
+    #nav > .row > [class*="col-"] > ul ul ul {
+      box-shadow: none;
+      height: auto;
+      padding: 0;
+      position: relative;
+      top: 0;
+      border-left: 2px solid #ea7d3c;
+      margin-left: 14px;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul li {
+      float: none;
+      text-transform: none;
+      width: 100%;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul li a {
+      padding: 10px 15px;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul > li:hover > a {
+      background: #ea7d3c;
+      color: #fff;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul > li:hover ul {
+      display: block;
+    }
+ 
+    /* IV poziom */
+    #nav > .row > [class*="col-"] > ul ul ul ul {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 100%;
+      z-index: 10000;
+      width: 100%;
+      background: #ea7d3c;
+      margin-left: 0;
+      border-left: none;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul ul a {
+      color: #fff;
+    }
+ 
+    #nav > .row > [class*="col-"] > ul ul ul ul a:hover {
+      color: #333;
+      background: #fff;
+    }
+
 
 /* Piotr */
+#slider div img {
+    width: 100%;
+    height: auto;
+}
+#slider .slick-dots {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 5%;
+}
+#slider .slick-dots > li button {
+    display: none;
+}
+#slider .slick-dots > li:before {
+    content: "";
+    width: 8px;
+    height: 8px;
+    margin: 0 7px;
+    border-radius: 15px;
+    background: #ccc;
+    display: block;
+}
+#slider .slick-dots > li {
+    display: inline-block;
+    list-style: outside none none;
+    cursor: pointer;
+}
+#slider .slick-dots > li.slick-active:before {
+    background: #ea7d3c;
+    border-radius: 15px;
+}
+#slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin-top: -28px;
+    line-height: 50px;
+    color: #fff;
+    text-align: center;
+    z-index: 3;
+    font-size: 30px;
+}
+#slider .nextArrow {
+    margin-right: 12%;
+    float: right;
+}
+#slider .prevArrow {
+    margin-left: 12%;
+    float: left;
+}
+#slider .main_slider_button {
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    left: 0;
+    right: 0;
+    width: 145px;
+    height: 32px;
+    background-color: #ea7d3c;
+    border: none;
+    cursor: pointer;
+}
+#slider a .main_slider_button {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 11px;
+}
 
 /* Adrian */
+#recommend{
+    margin-top:20px;
+    height:640px;
+  }
+  
+  #recommend .col-12{
+    display: inline-block;
+    text-align: center;
+    font-size: 28px;
+    text-transform: uppercase;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom:20px;
+    padding-left: 80px;
+    margin-bottom:20px;
+  }
+  #recommend .checkout{
+    float:right;
+    font-size: 12px;
+    color:#ea7d3c;
+    margin-top: 10px;
+    margin-right: 20px;
+  }
+  #recommend a{
+    font-size:10px;
+    display: block;
+    text-decoration: none;
+  }
+  
+  #recommend img{
+    display: block;
+    margin:0 auto;
+  }
+  
+  #recommend .img-height{
+    height: 230px;
+  }
+  #recommend .product{
+    width:23.6%;
+    margin-top:60px;
+    height:350px;
+    margin-right:1.8%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: box-shadow 0.3s ease-in-out;
+  }
+  
+  #recommend .product:last-of-type{
+    margin-right: 0;
+  }
+  
+  #recommend a>h4{
+    color:black;
+    text-align: center;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 40px;
+    padding-bottom: 10px;
+    font-size: 15px;
+    border-bottom:1px solid lightgrey;
+  }
+  
+  #recommend a>p{
+    color:grey;
+    font-size:20px;
+    text-align: center;
+    padding-top:10px;
+  }
+  
+  /*HOVER*/
+  
+  #recommend .sizes{
+    border-bottom:1px solid lightgrey;
+    text-align: center;
+    margin-top:10px;
+    padding-bottom:10px;
+    display: none;
+  }
+  
+  #recommend .sizes span{
+    line-height: 14px;
+    font-size: 14px;
+    margin-right:10px;
+    font-weight: 600;
+    color:black;
+  }
+  
+  #recommend .sizes span:hover{
+    color:#ea7d3c;
+  }
+  
+  #recommend button{
+    border:1px solid #ea7d3c;
+    background-color: #ea7d3c;
+    color:white;
+    height:40px;
+    line-height: 40px;
+    text-transform: uppercase;
+    width:140px;
+    margin-top: 35px;
+    margin-left:51px;
+    display: none;
+  
+  }
+  
+  #recommend button:hover{
+    cursor:pointer;
+    background-color: white;
+    color:#ea7d3c;
+    border:2px solid #ea7d3c;
+  }
+  #recommend .product:hover{
+  height:418px;
+  border:1px solid white;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
+  
+  #recommend .product:hover .sizes{
+    display: block;
+  }
+  
+  #recommend .product:hover button{
+    display: block;
+  }
+  
+  /*HOVER*/
+  
+  #recommend .sizes{
+    border-bottom:1px solid lightgrey;
+    text-align: center;
+    display: none;
+    margin-top:10px;
+    padding-bottom:10px;
+  }
+  
+  #recommend .sizes span{
+    line-height: 14px;
+    font-size: 14px;
+    margin-right:10px;
+    font-weight: 600;
+    color:black;
+  }
+  
+  #recommend .sizes span:hover{
+    color:#ea7d3c;
+  }
+  
+  #recommend button{
+    border:1px solid #ea7d3c;
+    background-color: #ea7d3c;
+    color:white;
+    height:40px;
+    line-height: 40px;
+    text-transform: uppercase;
+    width:140px;
+    margin-top: 35px;
+    margin-left:51px;
+    display: none;
+  
+  }
+  
+  #recommend button:hover{
+    cursor:pointer;
+    background-color: white;
+    color:#ea7d3c;
+    border:2px solid #ea7d3c;
+  }
+  #recommend .product:hover{
+  height:418px;
+  border:1px solid white;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
+  
+  #recommend .product:hover .sizes{
+    display: block;
+  }
+  
+  #recommend .product:hover button{
+    display: block;
+  }
 
 /* Marta */
+#about strong {
+    font-weight: 800;
+  }
+   
+  #about h3 {
+    font-size: 28px;
+    margin-top: 70px;
+    margin-bottom : 10px;
+   
+  }
+   
+  #about p {
+    margin-top: 10px;
+    font-size: 13px;
+    line-height: 19px;
+    text-align: justify;
+   
+  }
+   
+  #about span {
+    color: #ea7d3c;
+   
+  }
 
 
 
