--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ body{
     margin-top:60px;
     height:350px;
     margin-right:1.8%;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
     transition: box-shadow 0.3s ease-in-out;
   }
   
