--- a/css/style.css
+++ b/css/style.css
@@ -231,12 +231,16 @@ body{
     font-size: 18px;
 }
 #footer {
-    margin-top: 30px;
+    background: url(../img/bg_footer.png) no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 15px 0;
+    height: 580px;;
 }
 
 #footer .row-no-gutters .container h3 {
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 14px;
     margin-bottom: 20px;
 }
@@ -247,9 +251,66 @@ body{
     font-size: 12px;
     line-height: 22px;
 }
+#footer .row-no-gutters .container ul li a {
+    text-decoration: none;
+    color: #222;
+}
+#footer .row-no-gutters .container ul li a:hover {
+    color: #ea7d3c;
+}
 
 #footer .row-no-gutters .container div {   
     margin-bottom: 20px;    
+}
+
+#footer .row-no-gutters .container .last {
+    background: #fff;
+    text-align: center;
+    height: 200px;
+    margin-bottom: 5px;
+}
+#footer .row-no-gutters .container .last img{
+  margin-bottom: 15px;
+}
+
+#footer .row-no-gutters .container .last i {
+    transform: rotateY(180deg);
+    color: #ea7d3c;
+}
+
+#footer .row-no-gutters .container .last h3 {
+    margin-top: 15px;
+    text-transform: none;
+}
+
+#footer .row-no-gutters .container .last a {
+    display: block;
+    text-decoration: none;
+    color: #222;
+    padding-top: 12px;
+    font-size:14px;
+}
+#footer .row-no-gutters .container .last a:hover {
+    color: #ea7d3c;
+}
+
+#footer .row-no-gutters .container .last a strong{
+    font-weight: 800;
+}
+
+#footer .row-no-gutters .container .last-social {
+    background: #fff;
+    text-align: center;
+    padding-top: 19px;
+    padding-bottom: 19px;   
+}
+#footer .row-no-gutters .container .last-social span{
+    margin-right: 12px;
+}
+
+#footer .row-no-gutters .container .last-social a{
+    color: #ea7d3c;
+    margin-right: 12px;
 }
 
 
@@ -309,7 +370,6 @@ body{
     }
  
     #nav > .row > [class*="col-"] > ul > li > a {
-      /* display: block; */
       /*padding: 0 14px;*/
       /*padding: 0 68px 0 14px;*/
       padding: 0 34px 0 41px;
@@ -411,11 +471,221 @@ body{
       background: #fff;
     }
 
+    #product {
+        text-align: center;
+      }
+    
+      #product > .row {
+        margin-left: -8px;
+        margin-right: -8px;
+      }
+    
+      #product > .row > [class*="col-"] {
+        padding-left: 9px;
+        padding-right: 9px;
+        overflow: hidden;
+      }
+    
+      #product .product.col-6 {
+        height: 560px;
+      }
+    
+      #product .product.col-3 {
+        height: 271px;
+      }
+    
+      #product > .row > [class*="col-"] a  {
+        width: 100%;
+        display: block;
+        position: relative;
+        color: #fff;
+        overflow: hidden;
+      }
+    
+      #product > .row > [class*="col-"] a:before {
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        background: transparent;
+        z-index: 100;
+        opacity: 0;
+        transition: 0.3s;
+      }
+    
+      #product .product a .product-bg img {
+        transform: scale(1.0);
+        transition: 0.3s;
+      }
+    
+      #product .product a:hover .product-bg img {
+        transform: scale(1.2);
+        transition: 0.3s;
+      }
+    
+      #product .product a img.product-overlay {
+        transform: scale(1.0);
+        transition: 0.3s;
+      }
+    
+      #product .product a:hover img.product-overlay {
+        transform: scale(1.1);
+        transition: 0.3s;
+      }
+    
+      #product .product.product-black a:hover:before {
+        background: #000;
+        opacity: 0.6;
+      }
+    
+      #product .product.product-white a:hover:before {
+        background: #fff;
+        opacity: 0.3;
+      }
+    
+      #product .product.product-orange a:hover:before {
+        background: #ea7d3c;
+        opacity: 0.5;
+      }
+    
+      #product .product {
+        margin-bottom: 17px;
+      }
+    
+      #product .product-layer-outer {
+        z-index: 10;
+      }
+    
+      #product .product-content-outer {
+        z-index: 1000
+      }
+    
+      #product .product-content-outer,
+      #product .product-layer-outer {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+    
+      #product .product-content-outer:before,
+      #product .product-layer-outer:before {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        margin-right: -0.25em; /* Adjusts for spacing */
+      }
+    
+      #product .product-content-inner,
+      #product .product-layer-inner {
+        display: inline-block;
+        vertical-align: middle;
+        width: 100%;
+      }
+    
+      #product .product strong,
+      #product .product button {
+        display: block;
+      }
+    
+      #product .product strong {
+        text-transform: uppercase;
+        font-size: 30px;
+      }
+    
+      #product .product strong.text-shadow {
+        text-shadow: 0 -2px 8px #000;
+      }
+    
+      #product .product button {
+        margin: 0 auto;
+        display: block;
+        color: #fff;
+        background: none;
+        pointer-events: none;
+        text-transform: uppercase;
+        font-weight: 700;
+        transition: 0.3s;
+      }
+    
+      #product .product.col-6 button {
+        height: 37px;
+        font-size: 13px;
+        padding: 0 16px;
+        margin-top: 24px;
+      }
+    
+      #product .product.col-6 strong {
+        font-size: 40px;
+        line-height: 36px;
+        margin-bottom: 20px;
+      }
+    
+      #product .product.col-3 button {
+        height: 30px;
+        font-size: 10px;
+        padding: 0 15px;
+        margin-top: 10px;
+      }
+    
+      #product .product.col-3 strong {
+        font-size: 24px;
+        line-height: 24px;
+      }
+    
+      #product .product button.product-button-orange {
+        border: 1px solid #ea7d3c;
+        background: rgba(234, 125, 60, 0.2);
+      }
+    
+    
+      #product .product button.product-button-white {
+        border: 1px solid #fff;
+        background: none;
+      }
+    
+      #product .product button.product-button-white-full {
+        color: #ea7d3c;
+        background: #fff;
+        border: 1px solid #fff;
+        font-weight: 700;
+        font-style: italic;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+    
+      #product .product.col-3 button.product-button-white-full {
+        height: 37px;
+        font-size: 18px;
+      }
+    
+      #product .product button.product-price {
+        text-transform: none;
+      }
+    
+      #product > .row > [class*="col-"] a:hover button.product-button-orange {
+        background: rgba(234, 125, 60, 1);
+      }
+    
+      #product > .row > [class*="col-"] a:hover button.product-button-white {
+        background: #fff;
+        color: #ea7d3c;
+      }
+    
+      #product > .row > [class*="col-"] a:hover button.product-button-white-full {
+        background: #ea7d3c;
+        color: #fff;
+        border-color: #ea7d3c;
+      }
 
 /* Piotr */
 #slider div img {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 #slider .slick-dots {
     text-align: center;
@@ -454,10 +724,12 @@ body{
     text-align: center;
     z-index: 3;
     font-size: 30px;
+    cursor: pointer;
 }
 #slider .nextArrow {
+    position: absolute;
+    left: 87%;
     margin-right: 12%;
-    float: right;
 }
 #slider .prevArrow {
     margin-left: 12%;
@@ -485,38 +757,36 @@ body{
 
 /* Adrian */
 #recommend{
-    margin-top:20px;
+    margin-top:40px;
     height:640px;
   }
-  
+#recommend .recommend-title{
+}
+
   #recommend .col-12{
     display: inline-block;
     text-align: center;
     font-size: 28px;
     text-transform: uppercase;
-    border-bottom: 1px solid lightgrey;
-    padding-bottom:20px;
     padding-left: 80px;
-    margin-bottom:20px;
   }
   #recommend .checkout{
     float:right;
     font-size: 12px;
     color:#ea7d3c;
-    margin-top: 10px;
-    margin-right: 20px;
+    padding-top: 10px;
   }
   #recommend a{
     font-size:10px;
     display: block;
     text-decoration: none;
   }
-  
+
   #recommend img{
     display: block;
     margin:0 auto;
   }
-  
+
   #recommend .img-height{
     height: 230px;
   }
@@ -528,11 +798,11 @@ body{
     /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
     transition: box-shadow 0.3s ease-in-out;
   }
-  
+
   #recommend .product:last-of-type{
     margin-right: 0;
   }
-  
+
   #recommend a>h4{
     color:black;
     text-align: center;
@@ -543,16 +813,16 @@ body{
     font-size: 15px;
     border-bottom:1px solid lightgrey;
   }
-  
+
   #recommend a>p{
     color:grey;
     font-size:20px;
     text-align: center;
     padding-top:10px;
   }
-  
-  /*HOVER*/
-  
+
+/*HOVER*/
+
   #recommend .sizes{
     border-bottom:1px solid lightgrey;
     text-align: center;
@@ -560,7 +830,7 @@ body{
     padding-bottom:10px;
     display: none;
   }
-  
+
   #recommend .sizes span{
     line-height: 14px;
     font-size: 14px;
@@ -568,11 +838,11 @@ body{
     font-weight: 600;
     color:black;
   }
-  
+
   #recommend .sizes span:hover{
     color:#ea7d3c;
   }
-  
+
   #recommend button{
     border:1px solid #ea7d3c;
     background-color: #ea7d3c;
@@ -584,9 +854,9 @@ body{
     margin-top: 35px;
     margin-left:51px;
     display: none;
-  
+
   }
-  
+
   #recommend button:hover{
     cursor:pointer;
     background-color: white;
@@ -598,70 +868,33 @@ body{
   border:1px solid white;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   }
-  
+
   #recommend .product:hover .sizes{
     display: block;
   }
-  
+
   #recommend .product:hover button{
     display: block;
   }
-  
-  /*HOVER*/
-  
-  #recommend .sizes{
-    border-bottom:1px solid lightgrey;
-    text-align: center;
-    display: none;
-    margin-top:10px;
-    padding-bottom:10px;
-  }
-  
-  #recommend .sizes span{
-    line-height: 14px;
-    font-size: 14px;
-    margin-right:10px;
-    font-weight: 600;
-    color:black;
-  }
-  
-  #recommend .sizes span:hover{
-    color:#ea7d3c;
-  }
-  
-  #recommend button{
-    border:1px solid #ea7d3c;
-    background-color: #ea7d3c;
-    color:white;
-    height:40px;
-    line-height: 40px;
-    text-transform: uppercase;
-    width:140px;
-    margin-top: 35px;
-    margin-left:51px;
-    display: none;
-  
-  }
-  
-  #recommend button:hover{
-    cursor:pointer;
-    background-color: white;
-    color:#ea7d3c;
-    border:2px solid #ea7d3c;
-  }
-  #recommend .product:hover{
-  height:418px;
-  border:1px solid white;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  }
-  
-  #recommend .product:hover .sizes{
-    display: block;
-  }
-  
-  #recommend .product:hover button{
-    display: block;
-  }
+
+  /* linia pozioma */
+  .line {
+      padding-bottom: 30px;
+      margin-bottom: 30px;
+      border-bottom: 1px solid #cacaca;
+      position: relative;
+    }
+
+    .line:after {
+      content: '';
+      width: 21px;
+      height: 14px;
+      background: url('../img/border-deco.png') no-repeat;
+      position: absolute;
+      bottom: -5px;
+      left: 45%;
+      margin-left: -10px;
+    }
 
 /* Marta */
 #about strong {
