--- a/css/style.css
+++ b/css/style.css
@@ -927,7 +927,7 @@ body{
     color: #ea7d3c;
    
   }
-  
+
   #newsletter form {
     background: url(../img/newsletter_bg.png) ;
     background-position: center;
@@ -970,7 +970,7 @@ body{
 
 
  #newsletter form > div > span {
-    font-size: 2.0em;
+    font-size: 40px;
      text-transform: uppercase;
      line-height: 50px;
      color: black;
@@ -992,4 +992,37 @@ body{
 }
 
 
+#footer .footer-bottom p {
+    font-size: 12x; 
 
+}
+#footer .footer-bottom .col-2 {
+    font-size: 12x; 
+    text-align: right;
+}
+#footer .footer-bottom strong {
+    font-weight: 700px;
+    
+}
+
+#newsletter form {
+    height: 100%;
+    /*background: url(../img/newsletter_bg.png) ;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;*/
+   /*background-attachment: fixed; */ 
+    overflow: hidden; 
+    padding: 15px;
+}
+#newsletter {
+    margin-bottom: 85px;
+    background: url(../img/newsletter_bg.png);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: 100%;
+}
+
+#newsletter form {
+    background: none;
+}
